After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 637853 - timeout-test fails after the GTls switch
timeout-test fails after the GTls switch
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: Misc
2.33.x
Other Linux
: Normal normal
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2010-12-23 03:02 UTC by Emilio Pozuelo Monfort
Modified: 2011-01-07 19:53 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Emilio Pozuelo Monfort 2010-12-23 03:02:25 UTC
I've built libsoup 2.33.4 and the timeout-test now fails

Running it with -d:


http
  async
    fast to idle
    fast to plain
    fast to timeout
    slow to timeout
    fast to idle
    fast to plain
  sync
    fast to plain
    fast to timeout
    slow to timeout
    fast to plain

https
  async
    fast to idle

(timeout-test:18759): GLib-GObject-WARNING **: value "((GTlsCertificateFlags) G_TLS_CERTIFICATE_UNKNOWN_CA | G_TLS_CERTIFICATE_BAD_IDENTITY | G_TLS_CERTIFICATE_GENERIC_ERROR | 36562560)" of type `GTlsCertificateFlags' is invalid or out of range for property `tls-errors' of type `GTlsCertificateFlags'
    fast to plain

(timeout-test:18759): GLib-GObject-WARNING **: value "((GTlsCertificateFlags) G_TLS_CERTIFICATE_UNKNOWN_CA | G_TLS_CERTIFICATE_BAD_IDENTITY | G_TLS_CERTIFICATE_INSECURE | 3422651264)" of type `GTlsCertificateFlags' is invalid or out of range for property `tls-errors' of type `GTlsCertificateFlags'
    fast to timeout

(timeout-test:18759): GLib-GObject-WARNING **: value "((GTlsCertificateFlags) G_TLS_CERTIFICATE_UNKNOWN_CA | G_TLS_CERTIFICATE_BAD_IDENTITY | G_TLS_CERTIFICATE_REVOKED | G_TLS_CERTIFICATE_INSECURE | 3422624000)" of type `GTlsCertificateFlags' is invalid or out of range for property `tls-errors' of type `GTlsCertificateFlags'
    slow to timeout
    fast to idle

(timeout-test:18759): GLib-GObject-WARNING **: value "((GTlsCertificateFlags) G_TLS_CERTIFICATE_UNKNOWN_CA | G_TLS_CERTIFICATE_BAD_IDENTITY | G_TLS_CERTIFICATE_INSECURE | 3422628480)" of type `GTlsCertificateFlags' is invalid or out of range for property `tls-errors' of type `GTlsCertificateFlags'
    fast to plain
  sync
    fast to plain

(timeout-test:18759): GLib-GObject-WARNING **: value "((GTlsCertificateFlags) G_TLS_CERTIFICATE_UNKNOWN_CA | G_TLS_CERTIFICATE_BAD_IDENTITY | G_TLS_CERTIFICATE_INSECURE | 3422669184)" of type `GTlsCertificateFlags' is invalid or out of range for property `tls-errors' of type `GTlsCertificateFlags'
    fast to timeout

(timeout-test:18759): GLib-GObject-WARNING **: value "((GTlsCertificateFlags) G_TLS_CERTIFICATE_UNKNOWN_CA | G_TLS_CERTIFICATE_BAD_IDENTITY | G_TLS_CERTIFICATE_GENERIC_ERROR | 3422585728)" of type `GTlsCertificateFlags' is invalid or out of range for property `tls-errors' of type `GTlsCertificateFlags'
    slow to timeout
    fast to plain

timeout-test: 6 error(s).

And on gdb with fatal_warnings:
https
[New Thread 0x7ffff4c00710 (LWP 21692)]
  async
    fast to idle

GLib-GObject-WARNING **: value "((GTlsCertificateFlags) G_TLS_CERTIFICATE_UNKNOWN_CA | G_TLS_CERTIFICATE_BAD_IDENTITY | G_TLS_CERTIFICATE_REVOKED | G_TLS_CERTIFICATE_GENERIC_ERROR | 4026553472)" of type `GTlsCertificateFlags' is invalid or out of range for property `tls-errors' of type `GTlsCertificateFlags'
aborting...

Program received signal SIGTRAP, Trace/breakpoint trap.
g_logv (log_domain=<value optimized out>, log_level=<value optimized out>, 
    format=<value optimized out>, args1=0x7fffffffced0)
    at /tmp/buildd/glib2.0-2.27.5/glib/gmessages.c:563
563	/tmp/buildd/glib2.0-2.27.5/glib/gmessages.c: No such file or directory.
	in /tmp/buildd/glib2.0-2.27.5/glib/gmessages.c
(gdb) bt
  • #0 g_logv
    at /tmp/buildd/glib2.0-2.27.5/glib/gmessages.c line 563
  • #1 g_log
    at /tmp/buildd/glib2.0-2.27.5/glib/gmessages.c line 577
  • #2 object_set_property
    at /tmp/buildd/glib2.0-2.27.5/gobject/gobject.c line 1170
  • #3 g_object_set_valist
    at /tmp/buildd/glib2.0-2.27.5/gobject/gobject.c line 1695
  • #4 g_object_set
    at /tmp/buildd/glib2.0-2.27.5/gobject/gobject.c line 1801
  • #5 socket_tls_certificate_changed
    at soup-message-io.c line 1080
  • #6 g_closure_invoke
    at /tmp/buildd/glib2.0-2.27.5/gobject/gclosure.c line 767
  • #7 signal_emit_unlocked_R
    at /tmp/buildd/glib2.0-2.27.5/gobject/gsignal.c line 3252
  • #8 g_signal_emit_valist
    at /tmp/buildd/glib2.0-2.27.5/gobject/gsignal.c line 2983
  • #9 g_signal_emit
    at /tmp/buildd/glib2.0-2.27.5/gobject/gsignal.c line 3040
  • #10 g_object_dispatch_properties_changed
    at /tmp/buildd/glib2.0-2.27.5/gobject/gobject.c line 919
  • #11 g_object_notify_queue_thaw
    at /tmp/buildd/glib2.0-2.27.5/gobject/gobjectnotifyqueue.c line 132
  • #12 g_object_notify_by_spec_internal
  • #13 g_object_notify
    at /tmp/buildd/glib2.0-2.27.5/gobject/gobject.c line 1018
  • #14 soup_socket_peer_certificate_changed
    at soup-socket.c line 865
  • #15 g_closure_invoke
    at /tmp/buildd/glib2.0-2.27.5/gobject/gclosure.c line 767
  • #16 signal_emit_unlocked_R
    at /tmp/buildd/glib2.0-2.27.5/gobject/gsignal.c line 3252
  • #17 g_signal_emit_valist
    at /tmp/buildd/glib2.0-2.27.5/gobject/gsignal.c line 2983
  • #18 g_signal_emit
    at /tmp/buildd/glib2.0-2.27.5/gobject/gsignal.c line 3040
  • #19 g_object_dispatch_properties_changed
    at /tmp/buildd/glib2.0-2.27.5/gobject/gobject.c line 919
  • #20 g_object_notify_queue_thaw
    at /tmp/buildd/glib2.0-2.27.5/gobject/gobjectnotifyqueue.c line 132
  • #21 g_object_notify_by_spec_internal
    at /tmp/buildd/glib2.0-2.27.5/gobject/gobject.c line 977
  • #22 g_object_notify
    at /tmp/buildd/glib2.0-2.27.5/gobject/gobject.c line 1018
  • #23 ??
    from /usr/lib/gio/modules/libgiognutls.so
  • #24 ??
    from /usr/lib/gio/modules/libgiognutls.so
  • #25 soup_socket_write
    at soup-socket.c line 1428
  • #26 write_data
  • #27 io_write
    at soup-message-io.c line 645
  • #28 g_closure_invoke
    at /tmp/buildd/glib2.0-2.27.5/gobject/gclosure.c line 767
  • #29 signal_emit_unlocked_R
    at /tmp/buildd/glib2.0-2.27.5/gobject/gsignal.c line 3252
  • #30 g_signal_emit_valist
    at /tmp/buildd/glib2.0-2.27.5/gobject/gsignal.c line 2983
  • #31 g_signal_emit
    at /tmp/buildd/glib2.0-2.27.5/gobject/gsignal.c line 3040
  • #32 socket_write_watch
    at soup-socket.c line 1368
  • #33 ??
    from /usr/lib/gio/modules/libgiognutls.so
  • #34 g_main_dispatch
    at /tmp/buildd/glib2.0-2.27.5/glib/gmain.c line 2440
  • #35 g_main_context_dispatch
    at /tmp/buildd/glib2.0-2.27.5/glib/gmain.c line 3013
  • #36 g_main_context_iterate
    at /tmp/buildd/glib2.0-2.27.5/glib/gmain.c line 3091
  • #37 g_main_context_iteration
    at /tmp/buildd/glib2.0-2.27.5/glib/gmain.c line 3154
  • #38 send_message
    at soup-session-async.c line 484
  • #39 do_message_to_session
    at timeout-test.c line 23
  • #40 do_tests_for_session
  • #41 do_timeout_tests
    at timeout-test.c line 123
  • #42 main
    at timeout-test.c line 187

Comment 1 Dan Winship 2010-12-23 14:18:03 UTC
do you have the latest glib-networking? This looks like http://git.gnome.org/browse/glib-networking/commit/?id=23592af1629ecfe8c401925eadc99e5796a70e98
Comment 2 Emilio Pozuelo Monfort 2010-12-23 15:05:32 UTC
Yes, I have 2.27.5.
Comment 3 Dan Winship 2010-12-23 15:24:25 UTC
are you sure that 2.27.5 is what's actually getting loaded, as opposed to a leftover older install?

it works for me. if it doesn't work for you you'll have to figure out where the junk enum value is first appearing. maybe add some printfs to gtlsconnection-gnutls.c:handshake_internal().
Comment 4 Dan Winship 2011-01-07 19:53:16 UTC
fixed in git and in glib-networking 2.27.90

(it was another uninitialized variable. no clue how it managed to *always* get initialized to 0 for me...)