gnutls: fix an uninitialized variable

https://bugzilla.gnome.org/show_bug.cgi?id=637853